--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "primeflex": "^2.0.0",
     "primeicons": "^5.0.0",
     "primevue": "^2.7.0"
   }
